# libpkcs11shim

./: .gitignore  .gitmodules  CHANGELOG.md  INSTALL.md  Makefile.am  README.md  bootstrap.sh  buildx.sh  configure.ac
buildx/: Dockerfile.alpine321  Dockerfile.amzn2023  Dockerfile.deb12  Dockerfile.mingw64  Dockerfile.ol7  Dockerfile.ol8  Dockerfile.ol9  Dockerfile.ubuntu2204  Dockerfile.ubuntu2404
include/: cryptoki.h
src/: Makefile.am  atfork.c  atfork.h  deferred-printf.c  deferred-printf.h  libpkcs11.c  libpkcs11.h  libscdl.c  libscdl.h  pkcs11-display.c  pkcs11-display.h  pkcs11-shim.c  pkcs11-shim.h  pkcs11-spy.c  shim-config.c  shim-config.h  threadqueue.c  threadqueue.h
